--- a/index.html
+++ b/index.html
@@ -18,11 +18,15 @@
             <button onclick="addFilm()">Add Movie</button>
         </section>
         <section class="box-movies">
+            <h2>Your movies should appear here</h2>
             <ul class="list-films">
 
             </ul>
         </section>
     </main>
+    <footer>
+        <p>Desenvolvido por Leonardo Torres</p>
+    </footer>
 </body>
 <script src="assets/script.js"></script>
 </html>
